--- a/frontend-01blog/src/app/dashboard/dashboard.component.html
+++ b/frontend-01blog/src/app/dashboard/dashboard.component.html
@@ -56,7 +56,7 @@
           style="margin-left: 5px; background-color: #10b981;">Promote</button>
         } @else {
         <button (click)="demoteUser(user.id)" class="action-btn"
-          style="margin-left: 5px; background-color: #f59e0b;">Demote</button>
+          style="margin-left: 5px; background-color: rgba(0, 0, 0, 0.2);">Demote</button>
         }
 
       </div>
