--- a/frontend-01blog/src/app/dashboard/dashboard.component.scss
+++ b/frontend-01blog/src/app/dashboard/dashboard.component.scss
@@ -128,12 +128,25 @@
 }
 
 .action-btn {
-  padding: 6px 12px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  font-weight: 600;
-  font-size: 0.85rem;
+  // padding: 6px 12px;
+  // border: none;
+  // border-radius: 4px;
+  // cursor: pointer;
+  // font-weight: 600;
+  // font-size: 0.85rem;
+  //    background-color: rgba(0, 0, 0, 0.2);
+
+    padding: 6px 12px;
+    border: none;
+    cursor: pointer;
+    font-weight: 600;
+    font-size: 0.85rem;
+    border-radius: 20px;
+    background-color: #10b981;
+    margin-left: 5px;
+    border-color: #cbd5e1;
+    box-shadow: 0 0 0 2px rgba(59, 130, 246, 0.1);
+
 }
 
 .ban-btn {
