--- a/frontend-01blog/src/app/home/home.component.scss
+++ b/frontend-01blog/src/app/home/home.component.scss
@@ -12,6 +12,10 @@
   /* Center it */
   padding: 20px;
 }
+.post-media.fixed-height-media {
+    display: flex;
+    justify-content: center;
+}
 
 /* Discord Input */
 .discord-input-container {
@@ -301,7 +305,6 @@ span.remove-preview {
 }
 
 .comment-actions {
-  opacity: 0;
   transition: opacity 0.2s;
   display: flex;
   margin-left: auto;
@@ -338,7 +341,7 @@ span.remove-preview {
   /* ... existing styles ... */
   display: flex;
   flex-direction: column;
-  background: linear-gradient(45deg, #ffffff, transparent);
+  background: linear-gradient(45deg, #cee7ff, transparent);
 }
 
 /* Remove Borders from specific icons if any */
@@ -684,13 +687,22 @@ button.px-6.py-2.bg-indigo-600.hover\:bg-indigo-500.text-white.font-semibold.rou
 
 .fixed-height-media img,
 .fixed-height-media video {
-  max-width: 100%;
+  max-width: 80%;
   max-height: 100%;
   width: auto;
   height: auto;
   object-fit: contain;
   /* Maintain aspect ratio inside fixed box */
+
+  // max-width: 80%;
+  //   max-height: 50%;
+  //   width: auto;
+  //   height: auto;
+  //   border: 3px solid transparent;
+  //   object-fit: contain;
+  //   box-shadow: 2px 5px 7px 7.5px rgba(0, 0, 0, 0.1);
 }
+
 
 .pdf-preview {
   display: flex;
@@ -738,7 +750,7 @@ button.px-6.py-2.bg-indigo-600.hover\:bg-indigo-500.text-white.font-semibold.rou
   margin-top: 10px;
   border-radius: 8px;
   padding: 10px;
-  background: linear-gradient(45deg, #ffffff, transparent);
+  background: linear-gradient(45deg, #cee7ff, transparent);
 }
 
 .comment-row {
@@ -835,4 +847,15 @@ button.px-6.py-2.bg-indigo-600.hover\:bg-indigo-500.text-white.font-semibold.rou
   border-radius: 4px;
   border: none;
   cursor: pointer;
+}
+/* Scroll Animation */
+.scroll-animate {
+    opacity: 0;
+    transform: translateY(60px) scale(0.8);
+    transition: opacity 0.8s ease-out, transform 0.8s ease-out;
+}
+
+.scroll-animate.visible {
+    opacity: 1;
+    transform: translateY(0) scale(1);
 }
