--- a/frontend-01blog/src/app/dashboard/dashboard.component.html
+++ b/frontend-01blog/src/app/dashboard/dashboard.component.html
@@ -48,15 +48,13 @@
       <div class="actions">
         @if (user.role !== 'ADMIN') {
         @if (user.banned) {
-        <button (click)="unbanUser(user.id)" class="action-btn">Unban</button>
+        <button (click)="unbanUser(user.id)" class="action-btn unban-btn">Unban</button>
         } @else {
         <button (click)="banUser(user.id)" class="action-btn ban-btn">Ban</button>
         }
-        <button (click)="promoteUser(user.id)" class="action-btn"
-          style="margin-left: 5px; background-color: #10b981;">Promote</button>
+        <button (click)="promoteUser(user.id)" class="action-btn promote-btn">Promote</button>
         } @else {
-        <button (click)="demoteUser(user.id)" class="action-btn"
-          style="margin-left: 5px; background-color: rgba(0, 0, 0, 0.2);">Demote</button>
+        <button (click)="demoteUser(user.id)" class="action-btn demote-btn">Demote</button>
         }
 
       </div>
