--- a/frontend-01blog/src/app/dashboard/dashboard.component.scss
+++ b/frontend-01blog/src/app/dashboard/dashboard.component.scss
@@ -7,7 +7,7 @@
 
 .dashboard-title {
   text-align: center;
-  color: white;
+  color: #333;
   /* On blue sky */
   text-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   margin-bottom: 30px;
@@ -22,39 +22,58 @@
   justify-content: center;
 }
 
+// .hub-card {
+//   background: rgba(255, 255, 255, 0.9);
+//   backdrop-filter: blur(10px);
+//   border-radius: 16px;
+//   padding: 30px;
+//   text-align: center;
+//   cursor: pointer;
+//   transition: transform 0.2s, box-shadow 0.2s;
+//   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
+//   display: flex;
+//   flex-direction: column;
+//   align-items: center;
+//   gap: 10px;
+// }
+
+
 .hub-card {
-  background: rgba(255, 255, 255, 0.9);
+  background: rgba(255, 255, 255, 0.05);
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
   border-radius: 16px;
   padding: 30px;
   text-align: center;
   cursor: pointer;
   transition: transform 0.2s, box-shadow 0.2s;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 10px;
+  box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
+  color: #333;
 }
 
 .hub-card:hover {
-  transform: translateY(-5px);
+  transform: translateY(-2.5px);
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
-  background: white;
 }
 
 .hub-card .icon {
   font-size: 3rem;
   margin-bottom: 10px;
+  color: #333;
 }
 
 .hub-card h3 {
   margin: 0;
-  color: #1e293b;
+  color: #333;
 }
 
 .hub-card p {
-  color: #64748b;
+  color: #333;
   margin: 0;
 }
 
@@ -65,9 +84,16 @@
   align-items: center;
   justify-content: space-between;
   margin-bottom: 20px;
-  background: rgba(255, 255, 255, 0.9);
   padding: 10px 20px;
   border-radius: 8px;
+  background: rgba(255, 255, 255, 0.05);
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+  text-align: center;
+  transition: transform 0.2s, box-shadow 0.2s;
+  gap: 10px;
+  box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
+  color: #333;
 }
 
 .view-header h3 {
@@ -77,16 +103,10 @@
 
 .back-btn {
   background: transparent;
-  border: 1px solid #ccc;
-  padding: 5px 15px;
-  border-radius: 4px;
+  border: none;
   cursor: pointer;
   font-weight: bold;
-  color: #555;
-}
-
-.back-btn:hover {
-  background: #eee;
+  color: #333;
 }
 
 
@@ -98,13 +118,34 @@
 }
 
 .list-item {
-  background: white;
   padding: 15px;
   border-radius: 8px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+  margin-bottom: 20px;
+  background: rgba(255, 255, 255, 0.05);
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+  transition: transform 0.2s, box-shadow 0.2s;
+  gap: 10px;
+  box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
+  color: #333;
+  padding: 15px;
+  border-radius: 8px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+  background: rgba(255, 255, 255, 0.05);
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+  transition: transform 0.2s, box-shadow 0.2s;
+  gap: 10px;
+  box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
+  color: #333;
 }
 
 .item-info {
@@ -119,7 +160,9 @@
 
 .sub-text {
   font-size: 0.85rem;
-  color: #777;
+  color: #333;
+  font-weight: 600;
+  font-family: sans-serif;
 }
 
 .actions {
@@ -136,39 +179,48 @@
   // font-size: 0.85rem;
   //    background-color: rgba(0, 0, 0, 0.2);
 
-    padding: 6px 12px;
-    border: none;
-    cursor: pointer;
-    font-weight: 600;
-    font-size: 0.85rem;
-    border-radius: 20px;
-    background-color: #10b981;
-    margin-left: 5px;
-    border-color: #cbd5e1;
-    box-shadow: 0 0 0 2px rgba(59, 130, 246, 0.1);
+  padding: 8px 16px;
+  border: none;
+  cursor: pointer;
+  font-weight: 600;
+  font-size: 0.85rem;
+  gap: 10px;
+  border-radius: 20px;
+  margin-left: 5px;
+  background: linear-gradient(328deg, #009860, rgba(255, 255, 255, 0.2));
+  color: white;
+  border-color: #cbd5e1;
+  box-shadow: 0 0 0 2px rgb(172 204 255 / 6%);
 
 }
 
 .ban-btn {
-  background: #ef4444;
+  background: linear-gradient(328deg, #ef4444, rgba(255, 255, 255, 0.05));
   color: white;
+}
+
+.unban-btn {
+  background: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  color: #e2e8f0;
 }
 
 .dismiss-btn {
-  background: #64748b;
-  color: white;
+  background: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  color: #e2e8f0;
 }
 
 .promote-btn {
-  background: #22c55e;
-  /* Green */
+  margin-left: 5px;
+  background: linear-gradient(328deg, #009860, rgba(255, 255, 255, 0.2));
   color: white;
 }
 
 .demote-btn {
-  background: #eab308;
-  /* Yellow/Orange */
-  color: white;
+  background-color: rgba(0, 0, 0, 0.2);
+  background: rgba(0, 0, 0, 0.2);
+  // color: white;
 }
 
 .banned {
