--- a/frontend-01blog/src/app/home/home.component.html
+++ b/frontend-01blog/src/app/home/home.component.html
@@ -2,7 +2,7 @@
   <!-- MAIN FEED COLUMN -->
   <main class="feed-column">
 
-    <!-- CREATION POST (Discord Style Input) -->
+    <!-- CREATION POST  -->
     @if (loggedIn()) {
     <div class="discord-input-container">
 
@@ -31,7 +31,7 @@
         </div>
         }
         @if (postCreationError()) {
-        <div class="error-msg" style="color: #ef4444; font-size: 0.9rem; margin-top: 5px;">{{ postCreationError() }}
+        <div class="error-msg" style="color: #ffffff94; font-size: 0.9rem; margin-top: 5px; font-weight: bolder;">{{ postCreationError() }}
         </div>
         }
       </div>
