--- a/frontend-01blog/src/app/home/home.component.scss
+++ b/frontend-01blog/src/app/home/home.component.scss
@@ -380,7 +380,7 @@ button.comment-toggle-btn {
 
 /* Edit Post Form Styles */
 .edit-post-form {
-  background: #f0f4f8;
+  background: #f0f4f836;
   border-radius: 8px;
   padding: 12px;
   display: flex;
@@ -452,23 +452,13 @@ label.replace-media-btn {
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #64748b;
-  width: 40px;
-  height: 40px;
-  border-radius: 10px;
-  transition: all 0.2s ease;
-  cursor: pointer;
-  border: none;
-  background: transparent;
-  width: auto;
-  padding: 0 10px;
 }
 
 button.px-6.py-2.bg-gray-600.hover\:bg-gray-500.text-white.font-semibold.rounded-lg.shadow-md.transition.duration-300 {
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #64748b;
+  color: #000000;
   width: 40px;
   height: 40px;
   border-radius: 10px;
@@ -476,7 +466,7 @@ button.px-6.py-2.bg-gray-600.hover\:bg-gray-500.text-white.font-semibold.rounded
   cursor: pointer;
   border: none;
   background: transparent;
-  width: auto;
+  width: rgb(0, 0, 0)
   padding: 0 10px;
 }
 
@@ -484,7 +474,7 @@ button.px-6.py-2.bg-indigo-600.hover\:bg-indigo-500.text-white.font-semibold.rou
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #64748b;
+  color: #000000;
   width: 40px;
   height: 40px;
   border-radius: 10px;
